# stock_tax

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: activity.rs  compute.rs  convert.rs  currency.rs  dividend.rs  interactive_brokers.rs  main.rs  mbank.rs  nbp.rs  tax.rs  transaction.rs
