[package]
name = "stock_tax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
derive_more = "0.99.17"
macros = { version = "0.1.0", path = "macros" }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.159", features = ["derive"] }
