[package]
name = "stock_tax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
csv = "1.2.1"
derive_more = "0.99.17"
glob = "0.3.1"
lazy_static = "1.4.0"
macros = { version = "0.1.0", path = "macros" }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.159", features = ["derive", "alloc"] }
serde_json = "1.0.96"
